--- a/WinUIEditWinUI3Demo/MainWindow.xaml
+++ b/WinUIEditWinUI3Demo/MainWindow.xaml
@@ -6,9 +6,8 @@
     xmlns:local="using:WinUIEditWinUI3Demo"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:mica="using:MicaEditor"
     mc:Ignorable="d">
 
-    <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
-        <Button x:Name="myButton" Click="myButton_Click">Click Me</Button>
-    </StackPanel>
+    <mica:CodeEditorControl x:Name="Editor" Loaded="CodeEditorControl_Loaded" HighlightingLanguage="csharp" />
 </Window>
